Fix the color contrast between footer and background as well as between the keywords on navbar header and background. Also made the tiny keywords on navbar header much bigger.

--- a/style.css
+++ b/style.css
@@ -640,7 +640,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #FFFFFF!important;
 }
 
 .container {
